# py

./: .gitignore  Taskfile.yml  cleanup_cpu.sh  flow.toml  pyproject.toml  readme.md
.ai/: consumed-checkpoints.json
cli/claude_sdk/: __init__.py  __main__.py  run.py  sessions.py
cli/codex_sdk/: __init__.py  __main__.py  sessions.py
cli/flow/: cli.py
cli/why_crash/: __init__.py  __main__.py  cli.py
docs/: outdated-readme.md
infra/: __init__.py  __main__.py  prime.py
learn/: positional_encoding.py
learn/neural-networks/: 01_positional_encoding.py  02_attention.py  __init__.py
learn/os/: filesystem.py  main.py  process_fork.py  process_memory.py  scheduler.py  syscalls.py  virtual_memory.py
learn/transformers/: 01_embeddings_positional.py  02_self_attention.py  03_multi_head_attention.py  04_feed_forward.py  05_transformer_block.py  06_full_transformer.py  07_training_demo.py  pyproject.toml
learn_mlx/: __init__.py  basics.py  internals.py  training.py
learn_mlx/docs/: how-mlx-works.md
papers/glm5/: .gitignore  CLAUDE.md  flow.toml  pyproject.toml  readme.md
papers/glm5/src/glm5/: __init__.py
papers/glm5/tests/: test_glm5.py
scrape/: __init__.py  neurips.py  neurips2025.py
scripts/: archive_to_s3.py  disk_report.py  quick_scan.py  scan_results.json  storage_scan.py  xcode_cleanup.py
web/: flow.toml
